ocp-multicluster-kustomize-sample-demo/aws-ocp-cluster-3/overlays/backend/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2-app
  labels:
    project: app2-app
