ocp-multicluster-kustomize-sample-demo/aws-ocp-cluster-3/overlays/backend/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowed-ingress-network-policy
spec:
  podSelector:
    matchLabels:
      deployment: backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: app3-web
    - podSelector:
        matchLabels:
          deployment: frontend
    ports:
    - protocol: TCP
      port: 8192
